--- a/toolkit.html
+++ b/toolkit.html
@@ -30,8 +30,8 @@
     <p>Designed and built at <a href="http://railsware.com" target="_blank"> Railsware</a>. Code licensed under <a href="https://github.com/alchapone/applepie/blob/master/LICENSE" target="_blank">MIT</a> License.</p>
     <small>
       <span class="mrs">Currently v0.1.0</span> 
-      <a href="https://github.com/alchapone/applepie" class="mrs">GitHub</a>
-      <a href="https://github.com/alchapone/applepie/issues">Issues</a>
+      <a href="https://github.com/alchapone/applepie" class="mrs" target="_blank">GitHub</a>
+      <a href="https://github.com/alchapone/applepie/issues" target="_blank">Issues</a>
     </small>
   </footer>
 </body>
