--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <div class="col1of2 prm">
           <h2 class="mbs">Want to get familiar?</h2>
           <p>ApplePie is open source and may be used as a starter toolkit for bootstraping and prototiping your application. You can include whole toolkit to your project or use individual ApplePie modules that may be replaced or restyled in future.</p>
-          <a href="" class="button">Check out docs for more info</a>
+          <a href="#" class="button">Check out docs for more info</a>
         </div>
         <div class="col1of2 plm">
           <h2 class="mbs">Want to try it out?</h2>
           <p>As the simplest way to get started, the straight CSS version is perfect if you want to just start writing code or hacking on a simple, static site.</p>
-          <a href="" class="button">Go grab CSS v0.1.0</a>
+          <a href="#" class="button">Go grab CSS v0.1.0</a>
         </div>
       </div>
     </section>
